# FloBaRoID

./: .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  README.md  excite.py  gui.py  identification.py  identifier.py  identify.py  matplotlibrc  pyproject.toml  requirements.txt  simulator.py  test_butterworth.py  trajectory.py  visualizer.py
configs/: centauro.yaml  kuka_lwr4.yaml  kuka_lwr4_sim.yaml  kuka_lwr4_static.yaml  threeLinks.yaml  twoLinks.yaml  walkman.yaml  walkman_cad.yaml  walkman_crane.yaml  walkman_fixed.yaml  walkman_full.yaml  walkman_left_arm.yaml  walkman_sim.yaml  walkman_static.yaml
data/KUKA/: README.md
data/KUKA/HW/: measurements_1.npz  measurements_2.npz  measurements_3.npz
data/KUKA/SIM/: measurements_1.npz  measurements_10.npz  measurements_11.npz  measurements_12.npz  measurements_13.npz  measurements_14.npz  measurements_15.npz  measurements_2.npz  measurements_3.npz  measurements_4.npz  measurements_5.npz  measurements_6.npz  measurements_7.npz  measurements_8.npz  measurements_9.npz  measurements_opt_1.npz
data/LARM/: README.md
data/THREELINK/SIM/: measurements_opt1_fb.npz
data/WALKMAN/: README.md
data/WALKMAN/RLEG/SIM/: measurements.npz
documentation/: Dynamics Identification.ipynb  Getting base column explicit dependencies.ipynb  Linear equations, finding feasible solutions.ipynb  Obtaining base parameters, subspace basis and linear dependency equations.ipynb  QR base parameters and composition.ipynb  QR base parameters.ipynb  TUTORIAL.md  analysis_findings.md  design_notes.md  friction_velocity_filter_analysis.md  geometric_prior_analysis.md  identification_overview.xml  literature_friction_identification.md  simulation_validation.md  std_parameter_roadmap.md  walking_contact_identification.md
documentation/example output/: output_kuka.html
documentation/example output/css/: main.css
examples/: excite.sh  excite_kuka_lwr4.sh  identify_kuka_lwr4.sh  identify_threeLink.sh  optimize_kuka_lwr4.sh  parallel_optimize_kuka_lwr4.sh
excitation/: CMakeLists.txt  README  README.md  analyticalGradient.py  capsule.py  csv2npz.py  excite.py  optimizer.py  postureOptimizer.py  run.sh  simulationEffects.py  start_gazebo_kuka_lwr4.sh  start_gazebo_kuka_lwr4_sim.sh  suspendedDynamics.py  trajectoryGenerator.py  trajectoryOptimizer.py  visualizer.py
excitation/app/: CMakeLists.txt
excitation/robotCommunication/: ros_moveit.py  yarp_gym.py
excitation/robotCommunication/yarpGYM/: CMakeLists.txt
excitation/robotCommunication/yarpGYM/app/conf/: excitation_initial_config.ini
excitation/robotCommunication/yarpGYM/src/: excitation_main.cpp  excitation_msg.h  excitation_thread.cpp  excitation_thread.h  saveEigen.h
excitation/src/: excitation_constants.h  excitation_initial_config.ini  excitation_main.cpp  excitation_module.hpp  excitation_msg.h  excitation_thread.cpp  excitation_thread.h
identification/: collision.py  convex.py  createNoisyURDF.py  data.py  dynamicsRegressorGenerator.py  helpers.py  identification.py  identificationHelpers.py  model.py  nlopt.py  optimization.py  output.py  outputHTML.py  outputMatplotlib.py  quaternion.py  run.sh  sdp.py  sdp_helpers.py
identification/example_c++/: CMakeLists.txt  main.cpp
identification/output/css/: main.css
identification/output/templates/: index.html
identification/robotran/: delidinvbar.py  idinvbar.py  invdynabar.py
identification/robotran/left_arm/: delidinvbar.py  get_bar.py  idinvbar.py  invdynabar.py
identification/robotran/right_arm/: delidinvbar.py
identification/robotran/tools/: merge_bodies.py
model/: bigman.urdf  bigman_cleaned.urdf  bigman_left_arm.urdf  bigman_left_leg.urdf  bigman_regressor.xml  bigman_right_leg.urdf  bigman_right_leg_regressor.xml  bigman_robotran_right_leg.urdf  centauro.urdf  createNoisyURDF.py  kuka_lwr4.urdf  kuka_lwr4.urdf.trajectory.npz  kuka_lwr4.urdf.trajectory_opt_1.npz  kuka_lwr4_centroepiaggio.urdf  kuka_lwr4_cogimon.urdf  kuka_lwr4_gaz.urdf  kuka_lwr4_identified.urdf  kuka_lwr4_noisy.urdf  kuka_lwr4_noisy_0.05.urdf  kuka_lwr4_regressor.xml  kuka_lwr4_stiffness.urdf  simple_robot.urdf  threeLinks.urdf  threeLinks_regressor.xml  twoLinks.urdf  walkman.urdf  walkman_apriori.urdf  walkman_left_arm.urdf  walkman_left_arm_regressor.xml  walkman_left_leg.urdf  walkman_measured.urdf  walkman_only_legs.urdf  walkman_orig.urdf  walkman_regressor.xml  walkman_regressor_fixed.xml  walkman_robotran_right_leg.urdf  walkman_weights.ods  world_kuka.urdf  world_walkman_fixed.urdf  world_walkman_suspended.urdf
model/meshes/walkman/simple/: ProtectionSystem.STL
output/css/: main.css
output/templates/: index.html
results/: direct vs indirect std params.ods  params kuka.ods  params walkman gazebo.ods
tests/: test_cad_regularization.py  test_capsule.py  test_collision.py  test_data.py  test_excite.py  test_friction_helpers.py  test_identification.py  test_identification_fixed.py  test_identification_floating.py  test_regressors.py  test_sdp_baseline.py  test_suspended.py  test_trajectory_optimizer.py
tools/: createNoisyURDF.py  csv2npz.py  generate_fb_test_data.py  generate_icon.py  getMaxInertia.py  inspectMeasurements.py  paramErrorPlot.py  pyopt-alpso-patch.diff  scaleInertia.py  scaleInertia2.py
urdf/: robot2.urdf  simple_robot.urdf
