[project]
name = "flobaroid"
version = "0.1.0"
description = "FLOating BAse RObot dynamical IDentification"
readme = "README.md"
license = "LGPL-3.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "sympy==1.0",
    "cvxopt",
    "pylmi-sdp",
    "idyntree",
    "ipython",
    "pyyaml",
    # visualization
    "colorama",
    "palettable",
    "humanize",
    "tqdm",
    "jinja2",
    "trimesh",
    "PyOpenGL",
    "pyglet",
    "ruff>=0.15.6",
    "mypy>=1.14.1",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
visualization = [
]
tikz-plots = [
    "matplotlib",
    "matplotlib2tikz",
]
parallel = [
    "mpi4py",
]

[tool.uv]
python-preference = "managed"
